apps/paperless-ngx/networkpolicies/ingress-allow-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-allow-gateway
  namespace: paperless-ngx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
