apps/paperless-ngx/networkpolicies/ingress-deny-by-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-by-default
  namespace: paperless-ngx
spec:
  podSelector: {}
  policyTypes:
    - Ingress
